@@ -1,27 +1,43 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
- * notice. All rights reserved.
+ *  Copyright Terracotta, Inc.
+ *  Copyright Super iPaaS Integration LLC, an IBM Company 2024
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
  */
 package com.tc.net.groups;
 
-import com.tc.bytes.TCByteBuffer;
 import com.tc.io.TCByteBufferInputStream;
 import com.tc.io.TCByteBufferOutputStream;
 import com.tc.net.protocol.tcm.MessageChannel;
 import com.tc.net.protocol.tcm.MessageMonitor;
+import com.tc.net.protocol.tcm.NetworkRecall;
+import com.tc.net.protocol.tcm.TCActionNetworkMessage;
 import com.tc.net.protocol.tcm.TCMessageHeader;
 import com.tc.net.protocol.tcm.TCMessageType;
 import com.tc.object.msg.DSOMessageBase;
 import com.tc.object.session.SessionID;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * @author EY
  */
 public class TCGroupMessageWrapper extends DSOMessageBase {
   private final static byte GROUP_MESSAGE_ID = 1;
-  private GroupMessage      message;
+  private AbstractGroupMessage message;
+  private Runnable sentCallback;
 
   public TCGroupMessageWrapper(SessionID sessionID, MessageMonitor monitor, TCByteBufferOutputStream out,
                                MessageChannel channel, TCMessageType type) {
@@ -29,15 +45,15 @@ public class TCGroupMessageWrapper extends DSOMessageBase {
   }
 
   public TCGroupMessageWrapper(SessionID sessionID, MessageMonitor monitor, MessageChannel channel,
-                               TCMessageHeader header, TCByteBuffer[] data) {
+                               TCMessageHeader header, TCByteBufferInputStream data) {
     super(sessionID, monitor, channel, header, data);
   }
 
-  public void setGroupMessage(GroupMessage message) {
+  public void setGroupMessage(AbstractGroupMessage message) {
     this.message = message;
   }
 
-  public GroupMessage getGroupMessage() {
+  public AbstractGroupMessage getGroupMessage() {
     return this.message;
   }
 
@@ -53,25 +69,31 @@ public class TCGroupMessageWrapper extends DSOMessageBase {
       case GROUP_MESSAGE_ID:
         TCByteBufferInputStream in = getInputStream();
         try {
-          this.message = (GroupMessage) Class.forName(in.readString()).newInstance();
-        } catch (InstantiationException e) {
-          throw new RuntimeException(e);
-        } catch (IllegalAccessException e) {
-          throw new RuntimeException(e);
-        } catch (ClassNotFoundException e) {
+          this.message = (AbstractGroupMessage) Class.forName(in.readString()).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | InvocationTargetException | NoSuchMethodException e) {
           throw new RuntimeException(e);
         }
         this.message.deserializeFrom(in);
         return true;
+
       default:
         return false;
     }
   }
+  
+  public NetworkRecall send(Runnable callback) {
+    sentCallback = callback;
+    return super.send();
+  }
 
   @Override
-  public void doRecycleOnRead() {
-    if (message.isRecycleOnRead(this)) {
-      super.doRecycleOnRead();
+  public TCActionNetworkMessage convertToNetworkMessage() {
+    TCActionNetworkMessage msg = super.convertToNetworkMessage();
+    if (sentCallback != null) {
+      msg.addCompleteCallback(sentCallback);
     }
+    return msg;
   }
+  
+  
 }
